--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <!-- Google Translate Script -->
-<div id="google_translate_element"></div>
+<!-- <div id="google_translate_element"></div>
 
 <script type="text/javascript">
   function googleTranslateElementInit() {
@@ -43,13 +43,10 @@
 <script
   type="text/javascript"
   src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-></script>
+></script> -->
 
 
     <!-- =========================================================== -->
-
-
-
 
   </body>
 </html>
